# src/entity/prelude.rs
@@ -34,3 +34,5 @@ pub use super::user_verification::Entity as UserVerification;
 pub use super::wishlist_item::Entity as WishlistItem;
 pub use super::job_run::Entity as JobRun;
 pub use super::scheduled_job::Entity as ScheduledJob;
+
+pub use super::vehicle_type::Entity as VehicleType;
